# rk3588-driver-monitor

./: LICENSE  README.md
edge/cpp/: CMakeLists.txt  CMakeLists.txt.bak  aht20_quick.c  behavior_engine.cc  clean_shm.sh  env_monitor.c  gst_cam.c  main.cc  motion_monitor.c  mpu6050_test.c  postprocess.h  retinaface.cc  retinaface.h  shared_mem.h  shm_reader.c  start_backup_before_product.sh  start_before_llm.sh  stop.sh  ui_display.c  v4l2_producer.c  voice_monitor.c  yolov8-pose.h
edge/cpp/fan/: fan_control.c  pid_controller.c  pid_controller.h
edge/lvgl_display/UI/: Makefile  driver_state_engine_simple.c  driver_state_engine_simple.h  lv_conf.h  lv_drv_conf.h  lv_font_chinese_18.c  main.c  ui_fatigue.c  ui_fatigue.h
pc/: dashboard_neo.html  deepseek_proxy.py  driver_profile.json  edge_agent.py  edge_cache.json  start_edge_agent.bat
